<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/datetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="24sp"
        android:background="@drawable/clickable_shape"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="Hello World"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <Button
        android:id="@+id/savebtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="52sp"
        android:layout_marginRight="16sp"
        android:background="@drawable/clickable_shape"
        android:text="@string/save" />

    <TextView
        android:id="@+id/glucoseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/datetxt"
        android:layout_marginTop="29sp"
        android:text="@string/blood_sugar"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/glucoseLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/glucoseText"
        android:layout_marginTop="16sp"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/hourtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/datetxt"
        android:layout_alignBottom="@+id/datetxt"
        android:layout_marginLeft="14sp"
        android:layout_toRightOf="@+id/datetxt"
        android:background="@drawable/clickable_shape"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="Hello World"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/notesLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/notes_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/notesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/savebtn"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/glucoseLvl"
        android:layout_below="@+id/notesLbl"
        android:layout_marginTop="24dp"
        android:background="#880000ff"
        android:inputType="textMultiLine" />

</RelativeLayout>
